# 3-python-package-p3-py

./: Pipfile  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/: debug.py
src/debugBuddy/: __init__.py  __main__.py  cli.py  debug.py  example.py
tests/: test_debug.py
