[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debugBuddy"
description = "A python package that gives you general tips and encouragement when debugging your file!"
version = "0.0.0"
authors = [
    {name="Samir Hussain", email="sh6888@nyu.edu"},
    {name = "Jake Chang", email = "jc11229@nyu.edu"},
    {name = "Jimena Menendez", email = "jkm8294@nyu.edu"},
    {name = "Sarah Wang", email = "ssw8645@nyu.edu"}
    # Add other authors when you have their information
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ['python','package','debugging']
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-spring2025/3-python-package-p3-py"
"Repository" = "https://github.com/software-students-spring2025/3-python-package-p3-py.git"
"Bug Tracker" = "https://github.com/software-students-spring2025/3-python-package-p3-py/issues"

[project.scripts]
debugBuddy = "debugBuddy.__main__:main"
